--- a/library_book1/views/library_book.xml
+++ b/library_book1/views/library_book.xml
@@ -81,7 +81,7 @@
         <field name="res_model">library.loan.wizard</field>
         <field name="view_mode">tree,form</field>
         <field name="view_type">form</field>
-        <field name="target">current</field>
+        <field name="target">new</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
     </record>
