--- a/library_book1/views/library_book.xml
+++ b/library_book1/views/library_book.xml
@@ -79,7 +79,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="name">借书</field>
         <field name="res_model">library.loan.wizard</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">form</field>
         <field name="view_type">form</field>
         <field name="target">new</field>
         <field name="domain">[]</field>
