借书向导的form视图上添加record_borrow按钮

--- a/library_book1/views/library_book_view.xml
+++ b/library_book1/views/library_book_view.xml
@@ -15,7 +15,11 @@
                     
                     
                 </sheet>
-                
+                <footer>
+                    
+                    <button name="record_borrows" string="Borrow" type="object" />
+                    
+                </footer>
             </form>
             
         </field>
